# xllm

./: run.sh
xllm/core/: CMakeLists.txt
xllm/core/common/: global_flags.cpp  global_flags.h  help_formatter.h  message.h  options.cpp  options.h
xllm/core/distributed_runtime/: CMakeLists.txt  dist_manager.cpp  dit_engine.cpp  dit_engine.h  dit_master.cpp  dit_master.h  engine.h  engine_server.cpp  engine_server.h  engine_service.cpp  engine_service.h  ensemble_engine.cpp  ensemble_engine.h  ensemble_node_ready_service.cpp  ensemble_node_ready_service.h  master.cpp  omni_master.cpp  omni_master.h  vlm_engine.cpp  vlm_engine.h  vlm_master.cpp  vlm_master.h  worker_server.cpp  worker_service.cpp
xllm/core/distributed_runtime/spawn_worker_server/: spawn_worker_server.cpp  spawn_worker_server.h  spawn_worker_server_process.cpp
xllm/core/framework/: CMakeLists.txt  model_context.cpp
xllm/core/framework/batch/: batch.cpp  batch_input_builder.cpp  batch_input_builder.h  mposition.cpp  mposition.h  onerec_batch_input_builder.cpp  rec_multi_round_batch_input_builder.cpp
xllm/core/framework/block/: block_manager.h  block_manager_impl.cpp  block_manager_impl.h  (+5 more)
xllm/core/runtime/: CMakeLists.txt  executor.cpp  forward_params.h  forward_shared_memory_manager.cpp  forward_shared_memory_manager.h  mm_embed_vlm_worker_impl.cpp  options.h  vlm_engine.cpp  vlm_executor_impl.cpp  vlm_executor_impl.h  vlm_master.cpp  vlm_master.h  worker.cpp
xllm/core/util/: CMakeLists.txt  hash_util.cpp  hash_util.h  multimodal_util.cpp  multimodal_util.h  tensor_helper.h  utils.cpp  utils.h
(+232 files in other folders)
